// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <ProductCard /> debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Pruebas en <ProductCard /> debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
</div>
`;
